# cc-mypy

./: .gitignore  LICENSE  cookiecutter.json
hooks/: post_gen_project.py
{{cookiecutter.repo_name}}/: .envrc  .gitignore  dev-requirements.txt  setup.cfg  setup.py  tasks.py  tox.ini
