[metadata]
name = {{ cookiecutter.pkg_name }}
author = {{ cookiecutter.full_name }}
author-email = {{ cookiecutter.email }}
summary = {{ cookiecutter.short_description }}
description-file = README
home-page = {{ cookiecutter.url }}
license = {{ cookiecutter.license }}
classifier =
    Development Status :: 2 - Pre-Alpha
    Environment :: Console
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
keywords =
    setup
    distutils
[files]
packages =
    src/{{ cookiecutter.repo_name }}
data_files =
    LICENSE
[entry_points]
console_scripts =
    {{ cookiecutter.pkg_name }} = {{ cookiecutter.pkg_name}}.__main__:cli
[extras]
testing =
    pytest==2.8.4
    pytest-spec==0.2.24
    pytest-cov==2.2.0
    {% if "travis" in cookiecutter.features.replace(',', ' ').split() -%}
    coveralls==0.5
    {% endif -%}
    py>=1.4.29
    sh==1.11
